--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <h1 class="text-5xl flex justify-center my-4 mx-4 text-green-500">Saving Money </h1>
-    <section class=" container">
-        <div class="grid grid-cols-2 gap-4">
-            <div>
+    <section class=" container my-4">
+        <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-7">
+            <div class="mx-4">
                 <img src="images/moneystacks.jpg" alt="">
             </div>
-            <div>
+            <div class="mx-4">
 
                 <div>
                     <h2 class="inline">Income:</h2>
@@ -28,12 +28,12 @@
 
                 <div>
                     <h2 class="inline">Food:</h2>
-                    <input id="food-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
+                    <input id="food-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-4" type="text"
                         placeholder="Food">
                 </div>
                 <div>
                     <h2 class="inline">Rent:</h2>
-                    <input id="rent-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
+                    <input id="rent-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-5" type="text"
                         placeholder="Rent">
                 </div>
 
