--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
     <h1 class="text-5xl flex justify-center my-4 mx-4 text-green-500">Saving Money </h1>
     <section class=" container my-4">
         <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-7">
-            <div class="mx-4">
+            <div class="mx-8">
                 <img src="images/moneystacks.jpg" alt="">
             </div>
-            <div class="mx-4">
+            <div class="mx-8">
 
                 <div>
-                    <h2 class="inline">Income:</h2>
+                    <h2 class="inline text-1xl">Income:</h2>
                     <input id="income-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
                         placeholder="Income">
                 </div>
 
-                <h2 class="block text-3xl">Expenses</h2>
+                <h2 class="block text-2xl">Expenses</h2>
 
                 <div>
-                    <h2 class="inline">Food:</h2>
-                    <input id="food-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-4" type="text"
+                    <h2 class="inline text-1xl">Food:</h2>
+                    <input id="food-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-2" type="text"
                         placeholder="Food">
                 </div>
                 <div>
-                    <h2 class="inline">Rent:</h2>
-                    <input id="rent-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-5" type="text"
+                    <h2 class="inline text-1xl">Rent:</h2>
+                    <input id="rent-money" class="border-2 border-gray-400 rounded mt-4 px-2 ml-3" type="text"
                         placeholder="Rent">
                 </div>
 
                 <div>
-                    <h2 class="inline">Clothes:</h2>
+                    <h2 class="inline text-1xl">Clothes:</h2>
                     <input id="clothes-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
                         placeholder="Clothes">
                 </div>
