--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <img src="images/moneystacks.jpg" alt="">
             </div>
             <div class="mx-8">
-
                 <div>
                     <h2 class="inline text-1xl">Income:</h2>
                     <input id="income-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
@@ -59,6 +58,9 @@
 
             </div>
 
+        </div>
+        <div class="notify-section">
+            <p id="notify-number" class="notify">please give a number</p>
         </div>
     </section>
     <script src="js/money.js"></script>
