--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <!-- css -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Tailwindcss -->
     <script src="https://cdn.tailwindcss.com"></script>
 
 
@@ -24,6 +26,11 @@
                 <div>
                     <h2 class="block text-2xl">Income</h2>
                 </div>
+                <div class="notify-section">
+                    <p id="notify-income" class="notify">Please give a number value </p>
+                    <p id="notify-rent" class="notify">Please give number gater then 0</p>
+                </div>
+
                 <div>
                     <h2 class="inline text-1xl">Income:</h2>
                     <input id="income-money" class="border-2 border-gray-400 rounded mt-4 px-2" type="text"
@@ -82,10 +89,7 @@
                 </div>
 
             </div>
-            <div class="notify-section">
-                <p id="notify-income" class="notify">Please </p>
-                <p id="notify-rent" class="notify"></p>
-            </div>
+
 
         </div>
 
