--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Saving Money</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
     <!-- fontawesome -->
@@ -61,7 +61,7 @@
                         placeholder="Clothes">
                 </div>
                 <div class="mt-4">
-                    <button id="calculate" class="bg-green-400 py-2 px-4">Calculate</button>
+                    <button id="calculate" class="bg-green-400 py-2 px-4 ml-20">Calculate</button>
                 </div>
 
                 <div>
